# QuikPay

./: .env.example  .gitignore  README.md  index.html  package-lock.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
backend/: jest.config.js
backend/src/: delivery.ts  discord.ts  health.ts  index.ts  metrics.ts  slack.ts  stellarListener.ts  swagger.ts  syncer.ts  webhooks.ts
backend/src/__tests__/: auth.test.ts  health.test.ts  setup.ts
backend/src/config/: cors.ts
backend/src/db/: archivePool.ts  pool.ts  schema.sql
contracts/automation_gateway/: Cargo.toml
contracts/common/: Cargo.toml
contracts/payroll_stream/: Cargo.toml
contracts/payroll_stream/src/: lib.rs
contracts/payroll_vault/: Cargo.toml
contracts/wage_accrual/: Cargo.toml
contracts/workforce_registry/: Cargo.toml
frontend/: App.tsx  index.css  main.tsx
frontend/components/: ConnectAccount.tsx  CopyButton.tsx  ErrorBoundary.tsx  WalletGuard.tsx
frontend/context/: ThemeContext.tsx
frontend/contracts/: payroll_stream.test.ts  payroll_stream.ts  payroll_vault.test.ts  payroll_vault.ts  util.ts
frontend/hooks/: usePayroll.ts  useStreams.ts
frontend/i18n/: formatters.ts
frontend/lib/: design-system.ts  utils.ts
frontend/pages/: EmployerSpace.tsx  Home.tsx  NotFound.tsx  WorkerSpace.tsx
frontend/providers/: NotificationProvider.tsx  ThemeProvider.tsx  WalletProvider.tsx
frontend/seo/: siteMeta.ts
frontend/styles/: design-tokens.css
frontend/test/: setup.ts
frontend/util/: errors.ts  exportData.ts  formatters.test.ts  simulationUtils.ts  storage.ts  wallet.ts
(+42 files in other folders)
